# ralgo

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  Makefile  README.md  autocontol.g.py  autocontrol.g.py  azure-pipelines.yml  cmake_install.cmake  make.py  ralgo.g.py  ralgo_test  setup.py  sigtrans
.bonesinger/: cmake.yml
.github/workflows/: cmake.yml  licant.yml
apps/cnc/: cnc  main.cpp  make.py
apps/cncsim/: chaineye.py  main.cpp  make.py
apps/sigtrans/: main.cpp  make.py  manip6dof.txt  prescript.txt  sincos.txt  tandem.py  tandem.txt
bindings/arduino/: collect_sources.py
bindings/python/: heimer.cpp  pywrap.cpp
doxygen/: Doxyfile
doxygen/html/: annotated.html  axis_8h_source.html  axisctr_8h_source.html  backpack_8h_source.html  basealgo_8h_source.html  chain2d_8h_source.html  chain_8h.html  chain_8h__incl.map  chain_8h__incl.md5  chain_8h_source.html  classes.html  classheimer_1_1axis__node-members.html  classheimer_1_1axis__node.html  classheimer_1_1axis__node__coll__graph.map  classheimer_1_1axis__node__coll__graph.md5  classheimer_1_1axis__node__inherit__graph.map  classheimer_1_1axis__node__inherit__graph.md5  classheimer_1_1axisctr-members.html  classheimer_1_1axisctr.html  classheimer_1_1axisctr__coll__graph.map  classheimer_1_1axisctr__coll__graph.md5  classheimer_1_1command__center__2-members.html  classheimer_1_1command__center__2.html  classheimer_1_1command__center__cls-members.html  classheimer_1_1command__center__cls.html  classheimer_1_1command__center__console-members.html  classheimer_1_1command__center__console.html  classheimer_1_1control__node-members.html  classheimer_1_1control__node.html  classheimer_1_1control__node__inherit__graph.map  classheimer_1_1control__node__inherit__graph.md5  classheimer_1_1control__update__interrupt__args-members.html  classheimer_1_1control__update__interrupt__args.html  classheimer_1_1control__update__interrupt__args__coll__graph.md5  classheimer_1_1control__update__interrupt__args__inherit__graph.map  classheimer_1_1coordinate__checker-members.html  classheimer_1_1coordinate__checker.html  classheimer_1_1coordinate__checker__inherit__graph.map  classheimer_1_1coordinate__checker__inherit__graph.md5  classheimer_1_1datanode-members.html  (+1082 more)
doxygen/latex/: annotated.tex  chain_8h.tex  chain_8h__incl.md5  classheimer_1_1axis__node.tex  classheimer_1_1axis__node__coll__graph.md5  classheimer_1_1axis__node__inherit__graph.md5  classheimer_1_1axisctr.tex  classheimer_1_1axisctr__coll__graph.md5  classheimer_1_1command__center__2.tex  (+369 more)
expers/: main.cpp  make.py
pyralgo/: __init__.py
ralgo/: binary_hypercube.h  boundary_box.h  cartesian_grid.h  defs.h  disctime-chrono-millis.cpp  disctime.h  fault-abort.cpp  fault.h  fault_exception.cpp  freq_invoke_imitation.h  gen.h  global_protection.cpp  global_protection.h  info.cpp  info.h  interpolate.h  linspace.h  lintrans.h  log.h  madgwick.cpp  madgwick.h  matops.h  matrix.h  number_line.h  pywrap.cpp  vecops.h  vecops_base.h  vector.h
test/: axisctr.cpp  axstate_linear_processor.cpp  axstate_sincos_processor.cpp  backpack.h  clinalg.cpp  concurent_axisctr.cpp  convex_zone_approval.cpp  geom.cpp  geom.hpp  heimer.cpp  heimer.hpp  heimer2.cpp  heimer_command.cpp  heimer_distance.cpp  index_brute_force.cpp  jjj  lapack_test.cpp  linetraj.cpp  madgwick.cpp  magnetometer.cpp  main.cpp  main.h  make.py  matops.cpp  matops.hpp  point_in_hexagon.cpp  quadgen.cpp  runtests  sliding_array.cpp  sliding_array.h  stepctr.cpp  stepctr_applier.cpp  traj.cpp  traj.hpp  tsdeform.cpp  vecops.cpp  vecops.h  virtdevs.cpp  wishfeed.cpp
tests/: boundary_box.cpp  cncmath.cpp  evaluate_external_accfeed.cpp  geom.cpp  geomalg.cpp  gps_solver.cpp  grid.cpp  linespace.cpp  make.py  number_line.cpp  size.cpp  tensor.cpp  terathon.cpp
tools/: formatcode.sh  subtrees-pull.sh
(+684 files in other folders)
